# Project_money

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  STATE.md  pyproject.toml
.claude/: settings.json
checklists/: README.md  before_ai_review.md  before_broker_integration.md  before_config_change.md  before_paper_workflow.md  before_provider_adapter.md  before_scheduling.md  project_bootstrap_checklist.md  safe_checkpoint_checklist.md
docs/: agent_tooling_synthesis.md  architecture.md  broker_strategy.md  claude_code_workflow.md  graph_ml_synthesis.md  label_policy.md  loop_architecture.md  maker_checker_policy.md  ml_shelf_integration.md  object_memory_and_ordering.md  promotion_policy.md  provider_strategy.md  report_policy.md  safety_policy.md  skill_evolution_policy.md  stock_market_synthesis.md  trading_corpus_synthesis.md  ts_forecasting_integration.md  verification_debt_policy.md  verification_policy.md
findings/: README.md
hooks/: guard_findings_bash.py  validate_finding.py
project_blueprints/: README.md  project_money.md
schemas/: README.md  belief_card.schema.json  decision_card.schema.json  evidence_record.schema.json  manual_review.schema.json  postmortem.schema.json  verification_debt.schema.json
tasks/: lessons.md  todo.md
templates/: README.md  STATE.template.md  daily_report.template.md  manual_review.template.md  postmortem.template.md  tasks.lessons.template.md  tasks.todo.template.md  verification_debt.template.md  weekly_report.template.md
tests/: conftest.py  specimens.py  test_bash_guard.py  test_calibration.py  (+25 more)
(+38 files in other folders)
