[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-money"
version = "0.1.0"
description = "Research-only quantitative strategy-research tooling: verification harnesses, leakage auditing, metric falsification, hypothesis ledger, MDL complexity gates. Produces findings for a human; never places orders or moves funds."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
